# other

./: .gitignore  .gitmodules  README.md  huffman_prepare.sh
donation_alerts_music/: donation_alerts_music.py
huffman/: .gitignore  CMakeLists.txt  Makefile  common.h  decode.cpp  decoder.cpp  decoder.h  encode.cpp  encoder.cpp  encoder.h  huffman.cpp  huffman_exception.cpp  huffman_exception.h
huffman/src/: common.h  decode.cpp  decoder.cpp  decoder.h  encode.cpp  encoder.cpp  huffman.cpp  huffman.h  huffman_exception.cpp  huffman_exception.h
huffman/tests/: mline.txt  rus_test.txt
string-art/: .gitignore  string_art.py
twitch_client/: get_messages.py
